--- a/style.css
+++ b/style.css
@@ -3,6 +3,13 @@ body {
     margin: 20px;
 }
 
+#nav, #controls {
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+    padding: 10px;
+}
+
 #root {
     display: flex;
     flex-direction: row;
