--- a/game-ui/style.css
+++ b/game-ui/style.css
@@ -38,20 +38,26 @@ button:hover {
     top:0; left: 0; bottom: 0; right: 0; 
     background-color: grey;
 }
-#nameBox, #classBox {
+#nameBox, #classBox, #nftBox {
     position: absolute; 
     top: 25%; left: 30%; right: 30%; 
     font-size: 24px; 
     height: 50px;
 }
 #classBox {
-    top: 45%; 
+    top: 40%; 
+}
+#nftBox {
+    top: 55%;
 }
 #chooseName {
     font-size: 24px;
 }
-#chooseClass {
-    font-size: 20px;
+#chooseClass, #chooseNft {
+    font-size: 18px;
+}
+span {
+    font-size: 12px;
 }
 #startButton, #heroButton {
     position: absolute; 
