register click nft, display chosen nft stats (bug)
- mock data for nft stats
- unable to attach eventListener on newly loaded nfts (need to use async await?)
- want so that currentTarget gets me #userNft
- then can find data in children e.g. userNftName and userNftAttr

--- a/game-ui/style.css
+++ b/game-ui/style.css
@@ -84,7 +84,7 @@ span {
 }
 #userNft { /* TODO: FIX NFT GALLERY CSS */
     border: #232323 solid 2px;
-    background: black;
+    background: #ddd;
 }
 #nftScreenButton {
     position: absolute;
