revamp attack dmg logic, fix randomMonster gen bug
- attack damage of 1st 2 attacks based on strength
- attack damage of new attacks based on mainStat
- discard use of adv.attr.damage property
- set all attacks' damage when battle initiated
- less woodle and more draggle/emby in level 4
- fix randomNumber calc bug in randomMonster()

--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@ h6 {
     top: 10%; left: 10%; right: 10%; bottom: 10%;
     background-color: white;
     border: #232323 double 4px;
+    z-index: 20;
 }
 #classBox {
     top: 40%; 
