--- a/style.css
+++ b/style.css
@@ -81,6 +81,20 @@ button:hover, #viewNft:hover {
     border: #232323 double 4px;
     z-index: 35;
 }
+.spinner { 
+    display: "none";
+    /* top: 40%; */
+    width: 40px; 
+    height: 40px; 
+    border: 5px solid #333; 
+    border-top: 5px solid #fff; 
+    border-radius: 50%; 
+    animation: spin 1s linear infinite; 
+    } 
+    @keyframes spin { 
+    0% { transform: rotate(0deg); } 
+    100% { transform: rotate(360deg); } 
+}
 #nftScreenContainer {
     bottom: 30%; left: 10%; right: 10%;
     overflow: auto;
