--- a/dapp/src/index.css
+++ b/dapp/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#userAddress {
+  display: none;
+}
+
+#ibGold {
+  display: none;
+}
