--- a/react-website/src/containers/tokenomics/tokenomics.css
+++ b/react-website/src/containers/tokenomics/tokenomics.css
@@ -36,16 +36,16 @@
 
 @media screen and (max-width: 990px) {
     .gpt3__blog-container {
-        flex-direction: column-reverse;
+        flex-direction: column;
     }
     .gpt3__blog-container_groupA {
         margin: 2rem 0;
     }
     .gpt3__blog-container_groupA .gpt3__blog-container_article {
-        width: 48%;
+        width: 100%;
     }
     .gpt3__blog-container_groupA .gpt3__blog-container_article-image {
-        height: 250px;
+        height: 500px;
     }
 }
 
