--- a/react-website/src/containers/features/features.css
+++ b/react-website/src/containers/features/features.css
@@ -1,11 +1,11 @@
-.gpt3__features {
+.adv3__features {
     width: 100%;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
 }
 
-.gpt3__features-heading {
+.adv3__features-heading {
     flex: 1;
     display: flex;
     justify-content: flex-start;
@@ -15,7 +15,7 @@
     margin-right: 5rem;
 }
 
-.gpt3__features-heading h1 {
+.adv3__features-heading h1 {
     font-family: var(--font-family);
     font-style: normal;
     font-weight: 800;
@@ -23,7 +23,7 @@
     line-height: 45px;
 }
 
-.gpt3__features-heading p {
+.adv3__features-heading p {
     font-family: var(--font-family);
     font-style: normal;
     font-weight: 500;
@@ -33,7 +33,7 @@
     margin-top: 2rem;
 }
 
-.gpt3__features-container {
+.adv3__features-container {
     flex: 1.5;
     display: flex;
     justify-content: flex-start;
@@ -42,16 +42,16 @@
 }
 
 @media screen and (max-width: 990px) {
-    .gpt3__features {
+    .adv3__features {
         flex-direction: column;
     }
-    .gpt3__features-heading {
+    .adv3__features-heading {
         margin: 0 0 2rem 0;
     }
 }
 
 @media screen and (max-width: 550px) {
-    .gpt3__features-heading h1 {
+    .adv3__features-heading h1 {
         font-size: 28px;
         line-height: 38px;
     }
