--- a/react-website/src/containers/header/header.css
+++ b/react-website/src/containers/header/header.css
@@ -1,8 +1,8 @@
-.gpt3__header {
+.adv3__header {
     display: flex;
 }
 
-.gpt3__header-content {
+.adv3__header-content {
     flex: 1;
     display: flex;
     justify-content: center;
@@ -11,7 +11,7 @@
     margin-right: 5rem;
 }
 
-.gpt3__header-content h1 {
+.adv3__header-content h1 {
     font-family: var(--font-family);
     font-weight: 800;
     font-size: 62px;
@@ -19,7 +19,7 @@
     letter-spacing: -0.04em;
 }
 
-.gpt3__header-content p {
+.adv3__header-content p {
     font-family: var(--font-family);
     font-style: normal;
     font-weight: normal;
@@ -29,13 +29,13 @@
     margin-top: 1.5rem;
 }
 
-.gpt3__header-content__input {
+.adv3__header-content__input {
     width: 100%;
     margin: 2rem 0 1rem;
     display: flex;
 }
 
-.gpt3__header-content__input input {
+.adv3__header-content__input input {
     flex: 2;
     width: 100%;
     min-height: 50px;
@@ -51,7 +51,7 @@
     border-bottom-right-radius: 5px;
 }
 
-.gpt3__header-content__input button {
+.adv3__header-content__input button {
     flex: 0.6;
     width: 100%;
     min-height: 50px;
@@ -69,7 +69,7 @@
     border: none;
 }
 
-.gpt3__header-content__people {
+.adv3__header-content__people {
     width: 100%;
     display: flex;
     justify-content: flex-start;
@@ -77,12 +77,12 @@
     margin-top: 2rem;
 }
 
-.gpt3__header-content__people img {
+.adv3__header-content__people img {
     width: 181.79px;
     height: 38px;
 }
 
-.gpt3__header-content__people p {
+.adv3__header-content__people p {
     margin: 0 0 0 1rem;
     font-family: var(--font-family);
     font-weight: 500;
@@ -92,60 +92,60 @@
     text-align: center;
 }
 
-.gpt3__header-image {
+.adv3__header-image {
     flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.gpt3__header-image img {
+.adv3__header-image img {
     width: 100%;
     height: 100%;
 }
 
 @media screen and (max-width: 1050px) {
-    .gpt3__header {
+    .adv3__header {
         flex-direction: column;
     }
-    .gpt3__header-content {
+    .adv3__header-content {
         margin: 0 0 3rem;
     }
 }
 
 @media screen and (max-width: 650px) {
-    .gpt3__header h1 {
+    .adv3__header h1 {
         font-size: 48px;
         line-height: 60px;
     }
-    .gpt3__header p {
+    .adv3__header p {
         font-size: 16px;
         line-height: 24px;
     }
-    .gpt3__header-content__people {
+    .adv3__header-content__people {
         flex-direction: column;
     }
-    .gpt3__header-content__people p {
+    .adv3__header-content__people p {
         margin: 0;
     }
-    .gpt3__header-content__input input, 
-    .gpt3__header-content__input button {
+    .adv3__header-content__input input, 
+    .adv3__header-content__input button {
         font-size: 16px;
         line-height: 24px;
     } 
 }
 
 @media screen and (max-width: 490px) {
-    .gpt3__header h1 {
+    .adv3__header h1 {
         font-size: 38px;
         line-height: 48px;
     }
-    .gpt3__header p {
+    .adv3__header p {
         font-size: 14px;
         line-height: 24px;
     }
-    .gpt3__header-content__input input, 
-    .gpt3__header-content__input button {
+    .adv3__header-content__input input, 
+    .adv3__header-content__input button {
         font-size: 12px;
         line-height: 16px;
     } 
