--- a/react-website/src/containers/footer/footer.css
+++ b/react-website/src/containers/footer/footer.css
@@ -1,4 +1,4 @@
-.gpt3__footer {
+.adv3__footer {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -6,13 +6,13 @@
     background: var(--color-footer);
 }
 
-.gpt3__footer-heading {
+.adv3__footer-heading {
     width: 100%;
     text-align: center;
     margin-bottom: 3rem;
 }
 
-.gpt3__footer-heading h1 {
+.adv3__footer-heading h1 {
     font-family: var(--font-family);
     font-weight: 800;
     font-size: 62px;
@@ -21,7 +21,7 @@
     letter-spacing: -0.04em;
 }
 
-.gpt3__footer-btn {
+.adv3__footer-btn {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -32,7 +32,7 @@
     cursor: pointer;
 }
 
-.gpt3__footer-btn p {
+.adv3__footer-btn p {
     box-sizing: border-box;
     font-family: var(--font-family);
     font-size: 18px;
@@ -41,7 +41,7 @@
     word-spacing: 2px;
 }
 
-.gpt3__footer-links {
+.adv3__footer-links {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
@@ -51,36 +51,36 @@
     text-align: left;
 }
 
-.gpt3__footer-links div {
+.adv3__footer-links div {
     width: 250px;
     margin: 1rem;
 }
 
-.gpt3__footer-links_logo {
+.adv3__footer-links_logo {
     display: flex;
     flex-direction: column;
 }
 
-.gpt3__footer-links_logo img {
+.adv3__footer-links_logo img {
     width: 118px;
     height: 30px;
     margin-bottom: 1rem;
 }
 
-.gpt3__footer-links_logo p {
+.adv3__footer-links_logo p {
     font-family: var(--font-family);
     font-size: 12px;
     line-height: 14px;
     color: #fff;
 }
 
-.gpt3__footer-links_div {
+.adv3__footer-links_div {
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
 }
 
-.gpt3__footer-links_div h4 {
+.adv3__footer-links_div h4 {
     font-family: var(--font-family);
     font-size: 14px;
     line-height: 16px;
@@ -88,7 +88,7 @@
     margin-bottom: 1rem;
 }
 
-.gpt3__footer-links_div p {
+.adv3__footer-links_div p {
     font-family: var(--font-family);
     font-size: 12px;
     line-height: 14px;
@@ -97,13 +97,13 @@
     cursor: pointer;
 }
 
-.gpt3__footer-copyright {
+.adv3__footer-copyright {
     margin-top: 2rem;
     text-align: center;
     width: 100%;
 }
 
-.gpt3__footer-copyright p {
+.adv3__footer-copyright p {
     font-family: var(--font-family);
     font-size: 12px;
     line-height: 14px;
@@ -111,28 +111,28 @@
 }
 
 @media screen and (max-width: 850px) {
-    .gpt3__footer-heading h1 {
+    .adv3__footer-heading h1 {
         font-size: 44px;
         line-height: 50px;
     }
 }
 
 @media screen and (max-width: 550px) {
-    .gpt3__footer-heading h1 {
+    .adv3__footer-heading h1 {
         font-size: 34px;
         line-height: 42px;
     }
-    .gpt3__footer-links div {
+    .adv3__footer-links div {
         margin: 1rem 0;
     }
-    .gpt3__footer-btn p {
+    .adv3__footer-btn p {
         font-size: 14px;
         line-height: 20px;
     }
 }
 
 @media screen and (max-width: 400px) {
-    .gpt3__footer-heading h1 {
+    .adv3__footer-heading h1 {
         font-size: 27px;
         line-height: 38px;
     }
