--- a/react-website/src/containers/games/games.css
+++ b/react-website/src/containers/games/games.css
@@ -1,9 +1,9 @@
-.gpt3__possibility {
+.adv3__games {
     display: flex;
     flex-direction: row;
 }
 
-.gpt3__possibility-image {
+.adv3__games-image {
     flex: 1;
     display: flex;
     justify-content: flex-start;
@@ -11,12 +11,12 @@
     margin-right: 2rem;
 }
 
-.gpt3__possibility-image img {
+.adv3__games-image img {
     width: 100%;
     height: 100%;
 }
 
-.gpt3__possibility-content {
+.adv3__games-content {
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -24,7 +24,7 @@
     align-items: flex-start;
 }
 
-.gpt3__possibility-content h4 {
+.adv3__games-content h4 {
     font-family: var(--font-family);
     font-weight: 500;
     font-size: 16px;
@@ -33,12 +33,12 @@
     cursor: pointer;
 }
 
-.gpt3__possibility-content h4:last-child {
+.adv3__games-content h4:last-child {
     color: #FF8A71;
     cursor: pointer;
 }
 
-.gpt3__possibility-content h1 {
+.adv3__games-content h1 {
     font-family: var(--font-family);
     font-weight: 800;
     font-size: 34px;
@@ -46,7 +46,7 @@
     margin: 1rem 0;
 }
 
-.gpt3__possibility-content p {
+.adv3__games-content p {
     font-family: var(--font-family);
     font-size: 16px;
     line-height: 30px;
@@ -55,13 +55,13 @@
 }
 
 @media screen and (max-width: 950px) {
-    .gpt3__possibility {
+    .adv3__games {
         flex-direction: column;
     }
-    .gpt3__possibility-image {
+    .adv3__games-image {
         margin: 1rem 0;
     }
-    .gpt3__possibility-content {
+    .adv3__games-content {
         margin-top: 2rem;
     }
 }
